--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div> 
+	<p>first paragraph</p>
+	<p>tere guieg byheg bbeb bihdbi bidhebi bhbed ghfjsg jfkshfg lsshf</p>
+	<p>tere guieg byheg bbeb bihdbi bidhebi bhbed ghfjsg jfkshfg lsshf</p>
+	<p>tere guieg byheg bbeb bihdbi bidhebi bhbed ghfjsg jfkshfg lsshf</p>
+	</div>
+
+	<ul class = "ul1">
+		<li>First Item</li>
+		<li>Second Item</li>
+		<li>Third Item</li>
+		<li>Fourth Item</li>
+		<li>Fifth Item</li>
+	</ul>
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
